2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Added the ContentControl style.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Added the HeaderedContentControl style.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Switched to implemented ProgressBarBrushConverter.

2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Added Expander style.

2007-06-13  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Style lookup was somehow affected by a previous change; made a unique key for a style.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Switched to implemented TabPanel.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Added TabItem style.
	
2007-06-02  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Added TabControl style.